Order by, pagination, présentation en tableau pour la page toutes les observations + résultat de recherche.

--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -57,7 +57,7 @@
         <div class="col-sm-4">
             statistiques du jour
             <div class="well">
-                <p>Some text..</p>
+                <script type="text/javascript" src="https://www.planetoscope.com/widget.php?id=1839&f=3"></script>
             </div>
             <div class="well">
                 <p>Some text..</p>
@@ -68,5 +68,8 @@
 
 {% endblock %}
 {% block foot %}{% endblock %}
-{% block js %}{{ parent() }}{% endblock %}
+{% block js %}{{ parent() }}
+
+
+{% endblock %}
 
