--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p>Désignez le lieu de votre observation:</p>
-                {{ parent() }}
+                {% block map %}{{ parent() }}{% endblock %}
 			</div>
 		</div>
 
