--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col-sm-9 bg-observation-main">
 				{% block overallContent %}
-					<div class="col-sm-6" >
+					<div class="col-sm-12 col-md-6" >
 						<button class="btn btn-default storing" id="obsLayout"><span class="glyphicon glyphicon-chevron-down"></span> Liste</button>
 						<div>
 						{% block content %}
@@ -62,7 +62,7 @@
 						{% endblock %}
 						</div>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-12 col-md-6">
 						<button class="btn btn-default storing" id="mapLayout"><span class="glyphicon glyphicon-chevron-down"></span> Carte</button>
 						<div>
                         {% block map %}
