--- a/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/observations.html.twig
@@ -8,7 +8,7 @@
 
         {{ parent() }}
 		<p>{{ resultsN }} {% if resultsN == 1 %} observation trouvée{% else %} observations trouvées{% endif %}
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {% if is_granted('ROLE_NATURALIST') %}
 				{% if resultsN != 0 %} - <button class="btn btn-info btn-xs" data-toggle="modal" data-target="#download">Télécharger les résultats <span class="glyphicon glyphicon-download"></span></button>{% endif %}
 			{% endif %}
 		</p>
