--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -17,7 +17,7 @@
             <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
             <div class="carousel-caption">
                 <h3>Observ1</h3>
-                <p>Text d'observation ou auteur</p>
+                <p>Texte d'observation ou auteur</p>
             </div>
         </div>
 
