--- a/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/creerObservation.html.twig
@@ -11,7 +11,11 @@
 	<div class="form-group">
 
         {{ form_start(form)  }}
-        {{ form_row(form.birdname, {'label':'Oiseau:'})  }}
+		<label for="bird">Oiseau:</label>
+		<select class="birdnames" name="bird" id="bird">
+			<option value="0">Sélectionnez un oiseau</option>
+		</select>
+
 		{{ form_row(form.notSure, {'label':'Je ne suis pas sûr de mon observation'})   }}
         {{ form_row(form.date, {'label':'Date de l\'observation:'}) }}
 		<div class="row">
@@ -56,8 +60,7 @@
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
 	<script src={{ asset("js/observations/positionSelector.js") }}></script>
 
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>
+
 
 {% endblock %}
 
