--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -10,7 +10,11 @@
 	<h1>Modifiez l'observation n°{{ obs.id }}</h1>
 
         {{ form_start(form)  }}
-        {{ form_row(form.birdname, {'label':'Oiseau:'})  }}
+		<label for="bird">Oiseau:</label>
+		<select class="birdnames" name="bird" id="bird">
+			<option value="{{ obs.birdname }}">{{ obs.birdname }}</option>
+		</select>
+
         {{ form_row(form.notSure, {'label':'Je ne suis pas sûr de mon observation'})   }}
         {{ form_row(form.date, {'label':'Date de l\'observation:'}) }}
 		<div class="row">
@@ -51,8 +55,8 @@
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
 	<script src={{ asset("js/observations/positionSelector.js") }}></script>
 
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>
+	<!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>-->
 
 {% endblock %}
 
