--- a/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/observationLayout.html.twig
@@ -81,12 +81,12 @@
 {% block foot %}{% endblock %}
 {% block js %}{{ parent() }}
 	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-	<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
-	<script src="{{ asset('js/observations/birdAjax.js') }}"></script>
-	<script src="{{ asset('js/observations/mapGenerator.js') }}"></script>
-	<script src="{{ asset('js/observations/mainObservationLayout.js') }}"></script>
+	<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script> <!-- Permet de générer des routes en js.-->
+	<script src="{{ asset('js/observations/birdAjax.js') }}"></script> <!--Rempli les champs de nom d'oiseaux barre de recherche et créer/modif-->
+	<script src="{{ asset('js/observations/mapGenerator.js') }}"></script> <!--Crée les cartes google map, et redimensionne.-->
+	<script src="{{ asset('js/observations/mainObservationLayout.js') }}"></script> <!-- Permet de se repérer dans la hierarchie -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7OxaSU742N4m30QGtTnkwb7TSoBSCzrc&callback=initMap&libraries=drawing,geometry,places" async defer></script>
-	<script src="{{ asset('js/observations/searchBar.js') }}"></script>
+	<script src="{{ asset('js/observations/searchBar.js') }}"></script><!--Spécifique au comportement de la barre de recherche-->
 
 
 {% endblock %}
