--- a/src/AppBundle/Resources/views/adminArticles.html.twig
+++ b/src/AppBundle/Resources/views/adminArticles.html.twig
@@ -3,6 +3,6 @@
 
 
 {% block content %}
-
 	Articles
+    {% include '@App:paginationTemplate.html' with {'pathOfPage':'admin_user'} %}
 {% endblock %}
