--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
 
 
                 <li>
-                    <a href="{{ path('blog_home') }}" class="text-center">
+                    <a href="{{ path('article_index') }}" class="text-center">
                         Blog
                     </a>
                 </li>
