Modification des images corrigée

--- a/src/AppBundle/Resources/views/accueil.html.twig
+++ b/src/AppBundle/Resources/views/accueil.html.twig
@@ -84,7 +84,18 @@
 {% endblock %}
 {% block foot %}{% endblock %}
 {% block js %}{{ parent() }}
-    <script> $(function(){ $('.widget_plus').hide(); });</script>
+    <script>
+        $(function(){ $('.widget_plus').hide(); });
+        $('.widget_planeto').hide();
+        var newForm=  '<p id="statFromPlaneto"> </p><p id="numberOfPlaneto"> '
+        $('.widget_planeto').after($(newForm));
+
+        $('#statFromPlaneto').text($('.widget_titre').find('a').text());
+        $('#numberOfPlaneto').text(0);
+        $('#Connecte1839').on('change', function(){
+            $('#numberOfPlaneto').html($(this));
+        });
+    </script>
 
 {% endblock %}
 
