--- a/src/AppBundle/Resources/views/adminArticles.html.twig
+++ b/src/AppBundle/Resources/views/adminArticles.html.twig
@@ -4,5 +4,5 @@
 
 {% block content %}
 	Articles
-    {% include '@App:paginationTemplate.html' with {'pathOfPage':'admin_articles'} %}
+    {% include '@App/paginationTemplate.html.twig' with {'pathOfPage':'admin_articles'} %}
 {% endblock %}
