--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -41,7 +41,13 @@
 		<div class="row">
 
 			<div class="col-sm-6 col-xs-12">
-                {{ form_row(form.image)}}
+                {% if obs.image %}
+					<input type="checkbox" class="validationRequired" name="keep" checked="checked">Garder l'ancienne image</input>
+				{% endif %}
+				<div class="validationR">
+					{{ form_row(form.image)}}
+
+				</div>
 			</div>
             {% if obs.image %}
 
