--- a/src/Birds/ObservationsBundle/Resources/views/Observations/lireObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/lireObservation.html.twig
@@ -25,3 +25,9 @@
 
 
 {% endblock %}
+
+{% block js %}
+    {{ parent() }}
+    <script src="{{ asset('js/observations/MapDispatcher.js') }}"></script>
+
+{% endblock %}
