--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -26,9 +26,13 @@
 
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">
+                {{ form_row(form.place, {attr:{'id':'place'}}) }}
+			</div>
+
+			<div class="col-sm-4 col-sm-offset-2" hidden>
                 {{ form_row(form.latitude) }}
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-4" hidden>
                 {{ form_row(form.longitude)  }}
 			</div>
 
@@ -69,13 +73,12 @@
 
 {% block js %}
 	<script>var page="add"</script>
+	<script src={{ asset("js/observations/positionSelector.js") }}></script>
     {{ parent() }}
 
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
-	<script src={{ asset("js/observations/positionSelector.js") }}></script>
 
-	<!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>-->
+
 
 {% endblock %}
 
